fix(chore): styling remove overflow x

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 body {
     box-sizing: border-box;
-    @apply font-Poppins w-screen;
+    @apply font-Poppins w-full bg-amber-50;
     /* width: 100vw; */
     /* max-width: 100vw; */
     /* overflow-x: hidden; */
